Bug 520345 - Vector Symbols weird behavior while scaling and visibility
Summary: Vector Symbols weird behavior while scaling and visibility
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Layers/Vector (other bugs)
Version First Reported In: 5.3.1
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2026-05-18 14:11 UTC by RamonMiranda
Modified: 2026-05-19 12:55 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description RamonMiranda 2026-05-18 14:11:04 UTC
hi Ramon here reporting a weird thing. After some comments in youtube's video https://youtu.be/spy-0EKBcvQ?si=ts6KBrc9z-_Q7-14
I have noticed symbol libraries doesn´t work in Krita 5.3.1, the symbols doesnt appear in the screen when you drag them from the docker.
So i went backwards and tested in 5.0 and 5.2 to see if was working there and Yes, it worked using global coordinateswith vectors in tool options in 5.3.1

Start Krita 5.3.1
import sci-fi library from this video https://youtu.be/spy-0EKBcvQ?si=ts6KBrc9z-_Q7-14
drag symbols to a new document and move
verify if you can see the symbols, if not to put fill background layer in red color.
If you move, rotate or scale symbols verify that there is no weird displacement
Acivate in tool options Global coordinates
If you move, rotate or scale symbols verify that there is no weird displacement (this parameter fixes in 5.0 and 5.2 the weird displacement when we scale the vector symbol)
OBSERVED RESULT
Weird displacement when we scale symbols in krita 5.0, to 5.2. We need to activate global coordinates in tool options for vector layer and symbols.

EXPECTED RESULT
Normal scaling  and visible on 5.3.1

SOFTWARE/OS VERSIONS
Krita

 Version: 5.2.11 (git a4da714)
 Hidpi: true

Qt

  Version (compiled): 5.15.7
  Version (loaded): 5.15.7

OS Information

  Build ABI: x86_64-little_endian-lp64
  Build CPU: x86_64
  CPU: x86_64
  Kernel Type: linux
  Kernel Version: 6.14.0-37-generic
  Pretty Productname: Ubuntu 25.04
  Product Type: ubuntu
  Product Version: 25.04
  Desktop: KDE
  Appimage build: Yes

Locale

  Languages: en_US, en, en_Latn_US
  C locale: LC_CTYPE=en_US.UTF-8;LC_NUMERIC=es_ES.UTF-8;LC_TIME=es_ES.UTF-8;LC_COLLATE=en_US.UTF-8;LC_MONETARY=es_ES.UTF-8;LC_MESSAGES=en_US.UTF-8;LC_PAPER=es_ES.UTF-8;LC_NAME=es_ES.UTF-8;LC_ADDRESS=es_ES.UTF-8;LC_TELEPHONE=es_ES.UTF-8;LC_MEASUREMENT=es_ES.UTF-8;LC_IDENTIFICATION=es_ES.UTF-8
  QLocale current: en
  QLocale system: en
  QTextCodec for locale: UTF-8

OpenGL Info
 
  Vendor:  "Intel" 
  Renderer:  "Mesa Intel(R) HD Graphics 4400 (HSW GT2)" 
  Driver version:  "4.6 (Core Profile) Mesa 25.0.7-0ubuntu0.25.04.2" 
  Shading language:  "4.60" 
  Requested format:  QSurfaceFormat(version 3.3, options QFlags<QSurfaceFormat::FormatOption>(), depthBufferSize 24, redBufferSize 8, greenBufferSize 8, blueBufferSize 8, alphaBufferSize 8, stencilBufferSize 8, samples -1, swapBehavior QSurfaceFormat::DoubleBuffer, swapInterval 0, colorSpace QSurfaceFormat::DefaultColorSpace, profile  QSurfaceFormat::CompatibilityProfile) 
  Current format:  QSurfaceFormat(version 4.6, options QFlags<QSurfaceFormat::FormatOption>(), depthBufferSize 24, redBufferSize 8, greenBufferSize 8, blueBufferSize 8, alphaBufferSize 8, stencilBufferSize 8, samples -1, swapBehavior QSurfaceFormat::DoubleBuffer, swapInterval 0, colorSpace QSurfaceFormat::DefaultColorSpace, profile  QSurfaceFormat::CoreProfile) 
  GL version: 4.6 
  Supports deprecated functions false 
  Is OpenGL ES: false 
  supportsBufferMapping: true 
  supportsBufferInvalidation: true 
  forceDisableTextureBuffers: false 
  Extensions: 
     GL_EXT_texture_filter_anisotropic 
     GL_ARB_texture_query_lod 
     GL_EXT_draw_buffers2 
     GL_ARB_texture_filter_anisotropic 
     GL_ARB_framebuffer_sRGB 
     GL_ARB_separate_shader_objects 
     GL_ARB_shader_objects 
     GL_ARB_gpu_shader5 
     GL_NV_compute_shader_derivatives 
     GL_3DFX_texture_compression_FXT1 
     GL_ARB_shading_language_include 
     GL_ARB_transform_feedback3 
     GL_ARB_framebuffer_object 
     GL_ARB_ES3_1_compatibility 
     GL_ARB_explicit_attrib_location 
     GL_ARB_robustness 
     GL_ARB_texture_multisample 
     GL_ARB_vertex_type_2_10_10_10_rev 
     GL_EXT_semaphore 
     GL_ARB_fragment_coord_conventions 
     GL_EXT_demote_to_helper_invocation 
     GL_ARB_multi_bind 
     GL_ARB_buffer_storage 
     GL_AMD_seamless_cubemap_per_texture 
     GL_ARB_gl_spirv 
     GL_ARB_sample_shading 
     GL_KHR_parallel_shader_compile 
     GL_ARB_arrays_of_arrays 
     GL_EXT_EGL_image_storage 
     GL_ARB_shader_texture_image_samples 
     GL_EXT_memory_object_fd 
     GL_ARB_fragment_layer_viewport 
     GL_EXT_framebuffer_multisample_blit_scaled 
     GL_ARB_ES2_compatibility 
     GL_OES_EGL_image 
     GL_ARB_framebuffer_no_attachments 
     GL_ARB_compute_shader 
     GL_ARB_conservative_depth 
     GL_INTEL_blackhole_render 
     GL_S3_s3tc 
     GL_ARB_shader_storage_buffer_object 
     GL_ARB_shading_language_420pack 
     GL_ARB_parallel_shader_compile 
     GL_ARB_map_buffer_range 
     GL_ARB_timer_query 
     GL_ARB_spirv_extensions 
     GL_EXT_texture_shared_exponent 
     GL_AMD_multi_draw_indirect 
     GL_ARB_pipeline_statistics_query 
     GL_EXT_timer_query 
     GL_ARB_texture_view 
     GL_ARB_vertex_buffer_object 
     GL_EXT_texture_sRGB_decode 
     GL_ARB_invalidate_subdata 
     GL_ARB_uniform_buffer_object 
     GL_ARB_texture_buffer_object_rgb32 
     GL_ARB_fragment_shader 
     GL_ARB_draw_buffers 
     GL_ARB_shader_subroutine 
     GL_ATI_texture_float 
     GL_MESA_shader_integer_functions 
     GL_ARB_polygon_offset_clamp 
     GL_EXT_polygon_offset_clamp 
     GL_KHR_no_error 
     GL_EXT_EGL_sync 
     GL_EXT_shader_framebuffer_fetch_non_coherent 
     GL_EXT_transform_feedback 
     GL_ARB_compressed_texture_pixel_storage 
     GL_ANGLE_texture_compression_dxt3 
     GL_ANGLE_texture_compression_dxt5 
     GL_ARB_half_float_pixel 
     GL_KHR_blend_equation_advanced 
     GL_ARB_draw_instanced 
     GL_ARB_draw_elements_base_vertex 
     GL_ARB_stencil_texturing 
     GL_ARB_seamless_cube_map 
     GL_ARB_texture_float 
     GL_EXT_abgr 
     GL_ARB_texture_compression_rgtc 
     GL_KHR_robustness 
     GL_MESA_pack_invert 
     GL_ARB_copy_buffer 
     GL_ARB_vertex_type_10f_11f_11f_rev 
     GL_ARB_internalformat_query 
     GL_ARB_get_texture_sub_image 
     GL_ARB_shader_precision 
     GL_ARB_blend_func_extended 
     GL_ARB_texture_gather 
     GL_ARB_sync 
     GL_ARB_shader_clock 
     GL_EXT_packed_float 
     GL_AMD_shader_trinary_minmax 
     GL_EXT_texture_compression_s3tc 
     GL_ARB_shader_group_vote 
     GL_ARB_shader_bit_encoding 
     GL_ARB_draw_buffers_blend 
     GL_AMD_query_buffer_object 
     GL_NV_texture_barrier 
     GL_INTEL_performance_query 
     GL_ARB_provoking_vertex 
     GL_EXT_vertex_array_bgra 
     GL_ARB_texture_cube_map_array 
     GL_ARB_shader_viewport_layer_array 
     GL_EXT_texture_swizzle 
     GL_ARB_texture_buffer_object 
     GL_EXT_pixel_buffer_object 
     GL_AMD_conservative_depth 
     GL_ATI_blend_equation_separate 
     GL_EXT_texture_sRGB 
     GL_AMD_texture_texture4 
     GL_EXT_texture_integer 
     GL_EXT_texture_compression_dxt1 
     GL_ARB_gpu_shader_fp64 
     GL_ARB_get_program_binary 
     GL_EXT_texture_shadow_lod 
     GL_ARB_direct_state_access 
     GL_ARB_texture_non_power_of_two 
     GL_KHR_context_flush_control 
     GL_ARB_sampler_objects 
     GL_ARB_vertex_attrib_binding 
     GL_EXT_texture_snorm 
     GL_AMD_vertex_shader_layer 
     GL_ARB_depth_clamp 
     GL_EXT_semaphore_fd 
     GL_ARB_ES3_compatibility 
     GL_AMD_pinned_memory 
     GL_ARB_map_buffer_alignment 
     GL_ARB_texture_compression_bptc 
     GL_ARB_clear_texture 
     GL_ARB_shader_image_load_store 
     GL_ARB_transform_feedback_overflow_query 
     GL_ARB_shader_atomic_counter_ops 
     GL_EXT_packed_depth_stencil 
     GL_NV_alpha_to_coverage_dither_control 
     GL_ARB_texture_mirror_clamp_to_edge 
     GL_ARB_texture_swizzle 
     GL_ARB_cull_distance 
     GL_ARB_clear_buffer_object 
     GL_ARB_derivative_control 
     GL_ARB_instanced_arrays 
     GL_EXT_framebuffer_sRGB 
     GL_ARB_texture_rectangle 
     GL_ARB_shading_language_packing 
     GL_ARB_vertex_array_bgra 
     GL_ARB_viewport_array 
     GL_AMD_performance_monitor 
     GL_ARB_base_instance 
     GL_ARB_shader_draw_parameters 
     GL_ARB_draw_indirect 
     GL_ARB_half_float_vertex 
     GL_ARB_texture_border_clamp 
     GL_ARB_indirect_parameters 
     GL_ARB_tessellation_shader 
     GL_EXT_shader_samples_identical 
     GL_EXT_vertex_attrib_64bit 
     GL_KHR_texture_compression_astc_sliced_3d 
     GL_ARB_program_interface_query 
     GL_ARB_shader_image_size 
     GL_ARB_shader_texture_lod 
     GL_ARB_multi_draw_indirect 
     GL_AMD_draw_buffers_blend 
     GL_EXT_texture_storage 
     GL_ARB_point_sprite 
     GL_EXT_framebuffer_object 
     GL_ARB_texture_stencil8 
     GL_KHR_texture_compression_astc_ldr 
     GL_MESA_framebuffer_flip_y 
     GL_ARB_query_buffer_object 
     GL_NV_copy_image 
     GL_EXT_blend_equation_separate 
     GL_EXT_provoking_vertex 
     GL_KHR_robust_buffer_access_behavior 
     GL_ARB_debug_output 
     GL_EXT_draw_instanced 
     GL_IBM_multimode_draw_arrays 
     GL_ARB_transform_feedback2 
     GL_ARB_transform_feedback_instanced 
     GL_EXT_texture_compression_rgtc 
     GL_ARB_texture_storage_multisample 
     GL_ARB_shader_atomic_counters 
     GL_ARB_pixel_buffer_object 
     GL_ARB_copy_image 
     GL_ARB_conditional_render_inverted 
     GL_ARB_vertex_attrib_64bit 
     GL_EXT_texture_sRGB_R8 
     GL_ARB_ES3_2_compatibility 
     GL_ARB_texture_rgb10_a2ui 
     GL_ARB_explicit_uniform_location 
     GL_EXT_framebuffer_multisample 
     GL_KHR_debug 
     GL_ARB_texture_storage 
     GL_ARB_compute_variable_group_size 
     GL_MESA_texture_signed_rgba 
     GL_ARB_occlusion_query2 
     GL_ARB_texture_buffer_range 
     GL_ARB_texture_query_levels 
     GL_ARB_vertex_shader 
     GL_NV_conditional_render 
     GL_ARB_internalformat_query2 
     GL_ARB_seamless_cubemap_per_texture 
     GL_EXT_shader_integer_mix 
     GL_NV_depth_clamp 
     GL_ARB_enhanced_layouts 
     GL_ARB_depth_buffer_float 
     GL_EXT_debug_label 
     GL_EXT_framebuffer_blit 
     GL_EXT_EGL_image_storage_compression 
     GL_ARB_robust_buffer_access_behavior 
     GL_ARB_texture_barrier 
     GL_EXT_texture_array 
     GL_AMD_vertex_shader_viewport_index 
     GL_NV_packed_depth_stencil 
     GL_ARB_texture_rg 
     GL_EXT_memory_object 
     GL_ARB_vertex_array_object 
     GL_ARB_clip_control 

QPA OpenGL Detection Info 
  supportsDesktopGL: true 
  supportsOpenGLES: true 
  isQtPreferOpenGLES: false 
  Detected renderers: 
    (Supported) Mesa Intel(R) HD Graphics 4400 (HSW GT2) (4.6 (Core Profile) Mesa 25.0.7-0ubuntu0.25.04.2) 
    (Supported) Mesa Intel(R) HD Graphics 4400 (HSW GT2) (OpenGL ES 3.2 Mesa 25.0.7-0ubuntu0.25.04.2)  

useBufferInvalidation (config option): false


Hardware Information

  GPU Acceleration: auto
  Memory: 7820 Mb
  Number of Cores: 4
  Swap Location: /tmp
  Built for: sse2
  Base instruction set: fma3+avx2
  Supported instruction sets: fma3+avx2 avx2 fma3+avx avx fma3+sse4.2 sse4.2 sse4.1 ssse3 sse3 sse2 

Current Settings

  Current Swap Location: /tmp
  Current Swap Location writable: true
  Undo Enabled: true
  Undo Stack Limit: 100
  Use OpenGL: true
  Use OpenGL Texture Buffer: true
  Disable Vector Optimizations: false
  Disable AVX Optimizations: false
  Canvas State: OPENGL_SUCCESS
  Autosave Interval: 420
  Use Backup Files: true
  Number of Backups Kept: 1
  Backup File Suffix: ~
  Backup Location: Same Folder as the File
  Backup Location writable: false
  Resource Location: /home/ramonlap/.local/share/krita
  Use Win8 Pointer Input: false
  Use RightMiddleTabletButton Workaround: false
  Levels of Detail Enabled: false
  Use Zip64: false


Loaded Python Plugins
	colorspace
	comics_project_management_tools
	documenttools
	exportlayers
	filtermanager
	lastdocumentsdocker
	plugin_importer
	quick_settings_docker
	scripter
	tenbrushes
	tenscripts


Display Information
Number of screens: 1
	Screen: 0
		Name: eDP-1
		Depth: 24
		Scale: 1
		Physical DPI125.152
		Logical DPI96.1032
		Physical Size: 277, 156
		Position: 0, 0
		Resolution in pixels: 1366x768
		Manufacturer: InfoVision Optoelectronics (Kunshan) Co.,Ltd China
		Model: IVO4e3
		Refresh Rate: 59.9928
		Serial Number: 


ADDITIONAL INFORMATION
Comment 1 wolthera 2026-05-19 12:39:16 UTC
Ok, so the problem is caused by the <title> tag inside the path itself. I still need to figure out how to fix it.
Comment 2 wolthera 2026-05-19 12:55:15 UTC
Git commit 04bc5322e1ee20fa5140c105d2ac50e858f8165f by Wolthera van Hövell tot Westerflier.
Committed on 19/05/2026 at 12:54.
Pushed by woltherav into branch 'master'.

Fix saving the title element on paths correctly.

This broke SVG symbols that had title elements, as drag-and-drop
does a roundtrip to SVG.

M  +1    -2    libs/flake/svg/SvgWriter.cpp

https://invent.kde.org/graphics/krita/-/commit/04bc5322e1ee20fa5140c105d2ac50e858f8165f
Comment 3 wolthera 2026-05-19 12:55:41 UTC
Git commit 141b615b42a1708cc233854808e0a05034dfe546 by Wolthera van Hövell.
Committed on 19/05/2026 at 12:55.
Pushed by woltherav into branch 'krita/6.0'.

Fix saving the title element on paths correctly.

This broke SVG symbols that had title elements, as drag-and-drop
does a roundtrip to SVG.


(cherry picked from commit 04bc5322e1ee20fa5140c105d2ac50e858f8165f)

Co-authored-by: Wolthera van Hövell tot Westerflier <griffinvalley@gmail.com>

M  +1    -2    libs/flake/svg/SvgWriter.cpp

https://invent.kde.org/graphics/krita/-/commit/141b615b42a1708cc233854808e0a05034dfe546