Fix saving the title element on paths correctly.

This broke SVG symbols that had title elements, as drag-and-drop
does a roundtrip to SVG.

BUG:520345